fixed z-index issues + add game card to each slides

--- a/frontend/src/components/Neutral/style.scss
+++ b/frontend/src/components/Neutral/style.scss
@@ -36,6 +36,12 @@
   font-size: calc(App.$fontSize / 1.5);
 }
 
+.swiperBlockNeutr {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
 .swiperNeutr > .swiper-pagination-bullets {
   --swiper-theme-color: rgb(83, 66, 51);
   height: 1em;
