--- a/frontend/src/pages/Asoiaf/style.scss
+++ b/frontend/src/pages/Asoiaf/style.scss
@@ -53,6 +53,8 @@
   -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 1s
     both;
   animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 1s both;
+  position: relative;
+  z-index: -2;
 }
 
 //SMARTPHONE
